 - GBA Video: Don't draw sprites using unmapped VRAM in GL renderer (fixes mgba.io/i/1865)
 - GBA Video: Implement green swap (fixes mgba.io/i/1609)
 - GBA Video: Fix rare regression blending semitransparent sprites (fixes mgba.io/i/1876)
 - GBA Video: Emulate sprite cycle limits in OpenGL renderer (fixes mgba.io/i/1635)
 - SM83: Emulate HALT bug
Other fixes:
 - 3DS: Redo video sync to be more precise
 - 3DS: Fix crash with libctru 2.0 when exiting
 - 3DS: Fix thread cleanup
 - All: Improve export headers (fixes mgba.io/i/1738)
 - Core: Ensure ELF regions can be written before trying
 - Core: Fix reported ROM size when a fixed buffer size is used
 - Core: Fix memory leak loading ELF files
 - Debugger: Don't skip undefined instructions when debugger attached
 - FFmpeg: Fix some small memory leaks
 - FFmpeg: Fix encoding of time base
 - GBA: Disable more checks when loading GS save with checks disabled (fixes mgba.io/i/1851)
 - GBA: Fix endianness issues in renderer proxy
 - GBA Core: Fix memory leak when loading symbols
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
 - Qt: Fix static compilation in MinGW (fixes mgba.io/i/1769)
 - Qt: Fix a race condition in the frame inspector
 - Qt: Add dummy English translation file (fixes mgba.io/i/1469)
 - Qt: Fix Battle Chip view not displaying chips on some DPI settings
 - Qt: Fix camera image being upside-down sometimes (fixes mgba.io/i/829 again)
 - mGUI: Fix closing down a game if an exit is signalled
 - mVL: Fix injecting accidentally draining non-injection buffer
 - SM83: Simplify register pair access on big endian
 - SM83: Disassemble STOP as one byte
 - VFS: Fix directory node listing on some filesystems
Misc:
 - 3DS: Use "wide mode" where applicable for slightly better filtering
 - Core: Add savedataUpdated callback
 - Core: Add shutdown callback
 - GB: Allow pausing event loop while CPU is blocked
 - GB: Add support for sleep and shutdown callbacks